header jumping fixed (big-screen)

--- a/styles_big_screen.css
+++ b/styles_big_screen.css
@@ -62,7 +62,14 @@ MENU: GENERAL
         /* float: left; */
         position: relative;
         display: inline-block;
+        /* padding: 0 2%; */
+        padding: 0 0;
         /* border: solid white 1px; */
+        text-align: center;
+    }
+    /* add correct style to Menu-buttons */
+    .btn {
+        line-height: 70px;
     }
     .Menu ul li:hover {
         background-color: darkcyan;
@@ -82,65 +89,71 @@ MENU: GENERAL
         top: 0;
         position: absolute;
     }
-    /* add correct style to Menu-buttons */
-    .page {
-        padding: 0 2%;
-        /* margin: 0 0.5%; */
-    }
-    .btn {
-        line-height: 70px;
-    }
     /* style subpages menu */
     .subpage li {
         background-color: lightgray;
-    }
-    /* style page-content menu */
-    .page-content li {
+        text-align: left;
         line-height: 25px;
-        padding: 2px 10px;;
+    }
+    .subpage a {
+        padding: 2% 10px;
     }
 /* =====================================================================================================
 SPECIFIC STYLES FOR MENUS
 ======================================================================================================== */
 /* Woordwonder */
-/* in 280 tekens */
-    .s_twitter {
-        width: 136px;
-        margin-left: -20px;
-        line-height: 25px;
-        padding: 2px 10px;
+    /* title */
+    .t_woordwonder {
+        min-width: 176px;       
     }
+    /* submenu level 1 (subpages)*/
+    .s_woordwonder {
+        min-width: 176px;
+    }
+/* in 280 tekens */
+    /* title */
+    .t_twitter {
+        min-width: 156px;        
+    }
+    /* submenu level 1 (subpages)*/
+    .s_twitter {
+        min-width: 156px;
+    }
+    /* submenu level 2 (sbupage content)*/
     .c_twitter {
-        margin-left: 146px;
+        margin-left: 156px;
     }
 /* dichtwerk */
+    .t_dichtwerk {
+        min-width: 135px;        
+    }
     .s_dichtwerk {
-        width: 175px;
-        margin-left: -20px;
-        line-height: 25px;
-        padding: 2px 10px;
+        min-width: 195px;
     }
 /* uitkijk */
+    .t_uitkijk  {
+        min-width: 110px;        
+    }
     .s_uitkijk {
-        width: 250px;
-        margin-left: -20px;
-        line-height: 25px;
-        padding: 2px 10px;   
+        min-width: 250px;
     }
     .c_uitkijk {
         margin-left: 260px;
     }
 /* save the planet */
+    .t_klimaat {
+        min-width: 164px;        
+    }
     .s_klimaat {
-        width: 164px;
-        margin-left: -20px;
-        line-height: 25px;
-        padding: 2px 10px;  
+        min-width: 164px;
     }
     .c_klimaat {
         margin-left: 174px;
     }
 /* gezien */
+    .t_gezien {
+        min-width: 100px;
+    }
 
 /* =====================================================================================================
 CONTENT
